--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
     <section id="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento
-                Computacional, através do ensino de Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a
-                turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <p class="escola-texto-um">A Escola Edtihe esta localizada na Rua Mato Grosso - 9255 - Dist Ferraria, Campo Largo - PR, 83609-800A.</p>.</p>
+            <p class="escola-texto-dois">A escola oferece o ensino fundamental II e o Ensimo Médio.</p>
         </div>
         <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
     </section>
