--- a/index.html
+++ b/index.html
@@ -34,86 +34,86 @@
         <div class="estudante-todos">
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
-                <h3 class="estudante-nome">Marcelo</h3>
-                <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png"
+                 <img class="estudante-imagem" src="fabiana.png" alt="foto da Fabiana">
+                <h3 class="estudante-nome">Fabiana</h3>
+                <a href="https://github.com/fabiana"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
-                <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png"
+                <a href="https://linkedin.com/fabiana"><img class="estudante-icone" src="linkedin.png"
                         alt="icone linkedin"></a>
-                <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png"
+                <a href="https://instagram.com/fabiana"><img class="estudante-icone" src="instagram.png"
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Gabi.jpg" alt="foto da gabi">
-                <h3 class="estudante-nome">Gabriela</h3>
-                <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png"
+                <img class="estudante-imagem" src="Luis Miguel.png" alt="foto do Luis Miguel">
+                <h3 class="estudante-nome">Luis Miguel</h3>
+                <a href="https://github.com/Luis Miguel"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone"
+                <a href="https://www.linkedin.com/in/luismiguel/"><img class="estudante-icone"
                         src="linkedin.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png"
+                <a href="https://www.instagram.com/luismiguel"><img class="estudante-icone" src="instagram.png"
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
-                <h3 class="estudante-nome">Lizandra</h3>
-                <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png"
+                <img class="estudante-imagem" src="Caroline.jpg" alt="foto da caroline">
+                <h3 class="estudante-nome">Caroline</h3>
+                <a href="https://github.com/Caroline"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone"
+                <a href="https://www.linkedin.com/in/caroline/"><img class="estudante-icone"
                         src="linkedin.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png"
+                <a href="https://www.instagram.com/caroline"><img class="estudante-icone" src="instagram.png"
                         alt="icone instagram"></a>
             </div>
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Joice.jpg" alt="foto da joice">
-                <h3 class="estudante-nome">Joice</h3>
-                <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png"
+                <img class="estudante-imagem" src="Pedro henrique.jpg" alt="foto do pedro henrique">
+                <h3 class="estudante-nome">Pedro Henrique</h3>
+                <a href="https://github.com/pedro henrique"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png"
+                <a href="https://www.linkedin.com/in/pedrohenrique/"><img class="estudante-icone" src="linkedin.png"
                         alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="instagram.png"
+                <a href="https://www.instagram.com/pedrohenrique/"><img class="estudante-icone" src="instagram.png"
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Maria.jpg" alt="foto da maria">
-                <h3 class="estudante-nome">Maria</h3>
+                <img class="estudante-imagem" src="Mariana.jpg" alt="foto da mariana">
+                <h3 class="estudante-nome">Mariana</h3>
                 <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png"
+                <a href="https://www.linkedin.com/in/mariana"><img class="estudante-icone" src="linkedin.png"
                         alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png"
+                <a href="https://www.instagram.com/mariana/"><img class="estudante-icone" src="instagram.png"
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Olivia.jpg" alt="foto da olhe">
-                <h3 class="estudante-nome">Olivia</h3>
+                <img class="estudante-imagem" src="Otávio.jpg" alt="foto da otávio">
+                <h3 class="estudante-nome">Otávio</h3>
                 <img class="estudante-icone" src="github.png" alt="icone github">
-                <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png"
+                <a href="https://www.linkedin.com/in/otavio/"><img class="estudante-icone" src="linkedin.png"
                         alt="icone linkedin"></a>
-                <a href="https://github.com/olhe12"><img class="estudante-icone" src="instagram.png"
+                <a href="https://github.com/otavio"><img class="estudante-icone" src="instagram.png"
                         alt="icone instagram"></a>
             </div>
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Rafa.jpg" alt="foto da rafa">
-                <h3 class="estudante-nome">Rafaela</h3>
+                <img class="estudante-imagem" src="Rafael.jpg" alt="foto da rafael">
+                <h3 class="estudante-nome">Rafael</h3>
                 <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
-                <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone"
+                <a href="http://linkedin.com/in/rafael"><img class="estudante-icone"
                         src="linkedin.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png"
+                <a href="https://www.instagram.com/rafael/"><img class="estudante-icone" src="instagram.png"
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Thais.jpg" alt="foto da thais">
-                <h3 class="estudante-nome">Thais</h3>
-                <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png"
+                <img class="estudante-imagem" src="renata.jpg" alt="foto da renata">
+                <h3 class="estudante-nome">Renata</h3>
+                <a href="https://github.com/Renata"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone"
+                <a href="https://www.linkedin.com/in/renata/"><img class="estudante-icone"
                         src="linkedin.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png"
+                <a href="https://www.instagram.com/renata/"><img class="estudante-icone" src="instagram.png"
                         alt="icone instagram"></a>
             </div>
 
