--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Luis Miguel.png" alt="foto do Luis Miguel">
+                <img class="estudante-imagem" src="luismiguel.png" alt="foto do Luis Miguel">
                 <h3 class="estudante-nome">Luis Miguel</h3>
                 <a href="https://github.com/Luis Miguel"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
@@ -76,7 +76,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Mariana.jpg" alt="foto da mariana">
+                <img class="estudante-imagem" src="mariana.png" alt="foto da mariana">
                 <h3 class="estudante-nome">Mariana</h3>
                 <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
