--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="escola-texto-um">A Escola Edtihe esta localizada na Rua Mato Grosso - 9255 - Dist Ferraria, Campo Largo - PR, 83609-800A.</p>.</p>
             <p class="escola-texto-dois">A escola oferece o ensino fundamental II e o Ensimo Médio.</p>
         </div>
-        <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="Formula-bro.png" alt="imagemdo edithe">
     </section>
 
     <section id="estudante">
